--- a/assets/css/inicio.css
+++ b/assets/css/inicio.css
@@ -16,7 +16,7 @@ body {
     flex-direction: column;
     background-color: #fceeda;
     padding: 80px 90px;
-    cursor: url('/assets/img/cursor.png'), auto;
+    cursor: url('../assets/img/cursor.png'), auto;
     overflow-x: hidden;
 }
 
@@ -130,7 +130,7 @@ main .music-cards .card .card_btn {
     align-items: center;
     justify-content: center;
     transition: all .2s ease-in-out;
-    cursor: url('/assets/img/cursor2.png'), auto;
+    cursor: url('../assets/img/cursor2.png'), auto;
 
 
     border-top: 2px solid #2a2826;
@@ -208,4 +208,5 @@ main .music-cards .card .card_btn:hover {
         opacity: 0;
     }
 }
+
 
