--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -15,7 +15,8 @@ body {
     height: 100vh;
     display: flex;
     overflow-x: hidden;
-    background-image: url("../assets/img/Background_Index.jpg");
+    background-image: url("assets/img/Background_Index.jpg");
+    cursor: url('assets/img/cursor.png'), auto;
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -45,6 +46,8 @@ main .start_btn {
     border-right: 5px solid #2a2826;
     border-left: 2px solid #2a2826;
 
+    cursor: url('assets/img/cursor2.png'), auto;
+
     font-size: 20px;
     font-family: "Share Tech Mono";
     color: #e6ceb0;
@@ -71,4 +74,5 @@ main .start_btn:hover {
 
 .page-transition.active {
     opacity: 1;
+
 }
